<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.trimly.ui.profile.ProfileFragment"
        android:label="@string/title_profile" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.trimly.ui.home.HomeFragment"
        android:label="@string/title_home" >
        <action
            android:id="@+id/actionNavigationHomeToBookingFragment"
            app:destination="@id/bookingFragment"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/bookingFragment"
        android:name="com.example.trimly.ui.booking.BookingFragment"
        android:label="Запис на послугу">
        <argument
            android:name="salon"
            app:argType="com.example.trimly.ui.home.Salon" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookings"
        android:name="com.example.trimly.ui.bookings.BookingsFragment"
        android:label="@string/title_bookings" />

</navigation> 